# open-transit

./: README.md
.devcontainer/: devcontainer.json  docker-compose.yml
app/: package-lock.json
docs/: .gitignore
docs/.makemd/: fileCache.mdc  superstate.mdc
docs/Ingeniería del proyecto/: Cronograma.md
docs/Ingeniería del proyecto/Análisis/: Introduction.md  Requirements.md
server/: .gitignore  Dockerfile  README.md  alembic.ini  database.py  docker-compose.yml  main.py  pyproject.toml
server/.devcontainer/: devcontainer.json
server/alembic/: env.py  script.py.mako
server/alembic/versions/: 001_initial_routes.py  002_users_and_recordings.py
server/models/: __init__.py  line.py  recording.py  route.py  user.py
server/routes/: __init__.py  lines.py  routes.py
